# Project-Euler

./: README.md
1. Multiples of 3 or 5/: README.md
1. Multiples of 3 or 5/Go/: solution1.go
1. Multiples of 3 or 5/OCaml/_build/: .db  .digest-db  log
1. Multiples of 3 or 5/OCaml/_build/default/lib/: solutions.cmxa
1. Multiples of 3 or 5/OCaml/_build/default/lib/.merlin-conf/: lib-solutions
1. Multiples of 3 or 5/OCaml/_build/default/lib/.solutions.objs/byte/: solutions.cmi  solutions.cmo  solutions.cmt
1. Multiples of 3 or 5/OCaml/_build/default/lib/.solutions.objs/native/: solutions.cmx
1. Multiples of 3 or 5/OCaml/test/: dune
2. Even Fibonacci Numbers/: README.md
2. Even Fibonacci Numbers/Go/: solution1.go
3. Largest Prime Factor/Rust/: Cargo.toml  solution1.rs
4. Largest Palindrome Product/: README.md
4. Largest Palindrome Product/OCaml/: dune-project
4. Largest Palindrome Product/OCaml/lib/: dune
5. Smallest Multiple/: README.md
6. Sum Square Different/: README.md
7. 10001st Prime/: README.md
8. Largest Product in a Series/: README.md
